# momento-protosocket-ffi

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  README.template.md  build.rs  release-please-config.json
.github/workflows/: on-pull-request.yml  on-push-to-main.yml
examples/: README.md  README.template.md
examples/golang/: callbacks.go  go.mod  main.go  main_macos.go  main_ubuntu.go
examples/pkg-config-setup/: momento_protosocket_ffi.pc
src/: lib.rs
src/protosocket/: cache_client.rs  configuration.rs  inner.rs  mod.rs
