[package]
name = "momento-protosocket-ffi"
version = "0.1.0"
edition = "2018"
build = "build.rs"

[lib]
crate-type = ["staticlib"]

[dependencies]
dashmap = "6.1.0"
libc = "0.2"
# TODO: make FFI compatible with >=0.54.1
momento = "=0.54.0"
once_cell = "1.21.3"
tokio = { version = "1.47.1", features = ["full"] }
tokio-rustls = "0.26.4"
zerocopy = "0.8.27"

[build-dependencies]
cbindgen = "0.29.0"
