[package]
name = "momento_protosocket_ffi"
version = "0.2.1"
edition = "2018"

[lib]
crate-type = [
    "staticlib",
    "lib",
]

[[bin]]
name = "generate-headers"
required-features = ["headers"]

[dependencies]
libc = "0.2"
momento = "0.55.0"
once_cell = "1.21.3"
safer-ffi.version = "0.1.13"
safer-ffi.features = []
tokio = { version = "1.47.1", features = ["full"] }
tokio-rustls = "0.26.4"

[features]
headers = ["safer-ffi/headers"]
